--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -90,6 +90,11 @@
     box-shadow: 2px 2px 4px black;
 }
 
+.form .btn:disabled
+{
+    /* border: 4px solid blue; */
+    cursor: not-allowed;
+}
 
 .right
 {
